<resources>
    <string name="app_name">TalkingToiletBackend</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_edit">EditActivity</string>

    <string name="fold">Fold</string>
    <string name="crumple">Crumple</string>
    <string name="choice">Method of choice?</string>
    <string name="thinking">What are you thinking of?</string>
    <string name="action_view_stats">View Stats</string>


    <string name="method_result">Everyone\'s method of choice</string>
    <string name="thinking_result">What people are thinking the following</string>
    <string name="location_stats">Locations Stats</string>
    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="sign_in_title">Signing In</string>
    <string name="sign_in_message">Confirming User</string>
    <string name="no_access">No unauthorised access</string>
</resources>
